
                     ngIRCd - Next Generation IRC Server
                           http://ngircd.barton.de/

               (c)2001-2024 Alexander Barton and Contributors.
               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --

ngIRCd 27

  - Autodetect support for IPv6 by default: Until now, IPv6 support was disabled
    by default, which seems a bit outdated in 2024. Note: You still can pass
    "--enable-ipv6"/"--disable-ipv6" to the ./configure script to forcefully
    activate or deactivate IPv6 support.
  - Update config.guess and config.sub to recent versions
  - Remove the unmaintained contrib/MacOSX/ folder: this includes the Xcode
    project as well as the outdated macOS "Package Maker" configuration. The
    sample launchd(8) configuration properties list file was moved to
    "contrib/de.barton.ngircd.plist" and kept.
  - Fix Channel Admins being able to to set Channel Owner status! "Sarah"
    reported this back in April 2021 and proposed a patch, thanks a lot!
  - Test suite: Update for OpenSSL 3.x, some command outputs changed.
  - Fix showing the "Ident" option in "--configtest" output which was never
    shown because of a coding error. Whoops!
  - Change GnuTLS "slot handling" messages to debug level: Those messages are
    about an internal implementation detail, not relevant for an administrator
    of ngIRCd.
  - Enlarge buffer for log messages: For example, SSL/TLS certificate
    information can easily get longer than 256 characters. So enlarge the log
    buffer to 1 KB.
  - Respect "SSLConnect" option for incoming connections and do not accept
    incoming plain-text ("non SSL") server connections for servers configured
    with "SSLConnect" enabled. This change prevents an authenticated
    client-server being able to force the server-server to send its password
    on a plain-text connection when SSL/TLS was intended.